--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
     "@mui/x-data-grid": "^6.18.6",
     "@reduxjs/toolkit": "^2.0.1",
+    "@sweetalert2/themes": "^5.0.15",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.300.0",
@@ -25,6 +26,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "styled-components": "^6.1.3",
+    "sweetalert2": "^11.10.1",
     "tailwind-scrollbar": "^3.0.5"
   },
   "devDependencies": {
